# cellUview

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  SliderTest.ui  annotated.html  build.sh  camera.cpp  camera.h  camera_8h_source.html  cell_uview_welcome_8h_source.html  class_camera-members.html  class_camera.html  class_gallery-members.html  class_gallery.html  class_gui-members.html  class_gui.html  class_motor_driver-members.html  class_motor_driver.html  classcell_uview_welcome-members.html  classcontrast_enhancement-members.html  classcontrast_enhancement.html  classdilation-members.html  classdilation.html  classedge_detection-members.html  classedge_detection.html  classerosion-members.html  classerosion.html  classes.html  classflat_field_correct-members.html  classflat_field_correct.html  classframe-members.html  classframe.html  classgray_scale-members.html  classgray_scale.html  classimage_processor-members.html  classimage_processor.html  classk_means_cluster-members.html  classk_means_cluster.html  (+26 more)
.github/workflows/: cmake.yml  docs.yml  doxygen-gh-pages.yml
Remake/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/: DEV_README_OLD.md  Doxyfile
docs/html/: annotated.html  annotated_dup.js  camera_8h_source.html  cell_uview_welcome_8h_source.html  class_camera-members.html  class_camera.html  class_gallery-members.html  class_gallery.html  class_gui-members.html  class_gui.html  classcell_uview_welcome-members.html  classcell_uview_welcome.html  classcontrast_enhancement-members.html  classcontrast_enhancement.html  classdilation-members.html  classdilation.html  classedge_detection-members.html  classedge_detection.html  classerosion-members.html  classerosion.html  classes.html  classflat_field_correct-members.html  classflat_field_correct.html  classframe-members.html  classframe.html  classgray_scale-members.html  classgray_scale.html  classimage_processor-members.html  classimage_processor.html  contrast_enhancement_8h_source.html  custom.css  dilation_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  edge_detection_8h_source.html  erosion_8h_source.html  files.html  flat_field_correct_8h_source.html  frame_8h_source.html  functions.html  (+10 more)
docs/latex/: annotated.tex  camera_8h_source.tex  cell_uview_welcome_8h_source.tex  class_camera.eps  class_camera.tex  class_gallery.tex  class_gui.eps  class_gui.tex  classcell_uview_welcome.tex  classcontrast_enhancement.eps  classcontrast_enhancement.tex  classdilation.eps  classdilation.tex  classedge_detection.eps  classedge_detection.tex  classerosion.eps  classerosion.tex  classflat_field_correct.eps  classflat_field_correct.tex  classframe.tex  classgray_scale.eps  classgray_scale.tex  classimage_processor.eps  classimage_processor.tex  files.tex  (+17 more)
html/: camera_8h_source.html  cell_uview_welcome_8h_source.html  class_camera.html  class_gallery.html  class_gui.html  classcell_uview_welcome.html  classcontrast_enhancement.html  classdilation.html  classedge_detection.html  classerosion-members.html  classerosion.html  classflat_field_correct-members.html  classflat_field_correct.html  classframe.html  classgray_scale.html  classimage_processor.html  contrast_enhancement_8h_source.html  dilation_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  edge_detection_8h_source.html  erosion_8h_source.html  flat_field_correct_8h_source.html  frame_8h_source.html  gallery_8h_source.html  gray_scale_8h_source.html  gui_8h_source.html  image_processor_8h_source.html  index.html
latex/: annotated.tex  camera_8h_source.tex  cell_uview_welcome_8h_source.tex  class_camera.eps  class_camera.tex  class_gallery.tex  class_gui.eps  class_gui.tex  classcell_uview_welcome.tex  classcontrast_enhancement.tex  classdilation.tex  classedge_detection.eps  classedge_detection.tex  classerosion.tex  classflat_field_correct.eps  classflat_field_correct.tex  classframe.tex  classgray_scale.eps  classgray_scale.tex  classimage_processor.eps  classimage_processor.tex  contrast_enhancement_8h_source.tex  dilation_8h_source.tex  edge_detection_8h_source.tex  erosion_8h_source.tex  files.tex  flat_field_correct_8h_source.tex  frame_8h_source.tex  gallery_8h_source.tex  gray_scale_8h_source.tex  gui_8h_source.tex  hierarchy.tex  image_processor_8h_source.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
search/: all_0.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
src/: .README.md.swp  .camera.cpp.swp  .gitignore  CMakeLists.txt  OpenFlexureWelcome.h  camera.cpp  camera.h  cellUviewWelcome.h  contrastEnhancement.cpp  contrastEnhancement.h  dilation.cpp  dilation.h  edgeDetection.cpp  edgeDetection.h  erosion.cpp  erosion.h  flatField.cpp  flatField.h  flatFieldCorrect.cpp  flatFieldCorrect.h  frame.cpp  frame.h  gallery.cpp  gallery.h  grayScale.cpp  grayScale.h  greyScale.cpp  greyScale.h  gui.cpp  gui.h  imageProcessor.h  kMeansCluster.cpp  kMeansCluster.h  main.cpp  moc_gui.cpp  motorDriver.cpp  motorDriver.h  processingTemplate.cpp  processingTemplate.h
src/OpenFlexure_automoc.dir/: moc_gui_TINKH5QXT4HTLX.cpp
src/QT/: .qtWindow.h.swp  README.md  gui.ui  qtWindow.h  rebuildGui.sh
test/: CMakeLists.txt  gtest_camera.h  gtest_edgedetect.h  gtest_endtest.h  gtest_gallery.h  gtest_metadata.h  main.cpp
(+13 files in other folders)
